# wget-faster

./: .clippy.toml  .gitignore  .rustfmt.toml  BENCHMARKS.md  CHANGELOG.md  CI_CD.md  CI_CD_SETUP_SUMMARY.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  PYTHON_TEST_RESULTS_v0.0.7.md  PYTHON_TEST_SUMMARY.txt  README.md  RELEASE.md  SPEC.md  TODO.md  WGET_TEST_INTEGRATION.md  clippy.toml  codecov.yml  deny.toml  justfile  python_test_analysis_report.md  python_test_quick_wins.md  rustfmt.toml  test
.cargo/: audit.toml
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: ci_cd_issue.md
.github/workflows/: benchmark.yml  ci.yml  coverage.yml  release.yml
benches/: download_bench.rs
docs/: SESSION_4_FINDINGS.md
scripts/: analyze_tests.py  setup-dev-tools.sh
todo/: CI_Issues.md  README.md  Test-504_py.md  Test-E-k-K_px.md  Test-N-HTTP-Content-Disposition_px.md  Test-N-current_px.md  Test-N-no-info_px.md  Test-N-old_px.md  Test-N-smaller_px.md  Test-N_no-content-disposition-trivial_px.md  Test-N_no-content-disposition_px.md  Test-N_px.md  Test-O-nonexisting_px.md  Test-Parallel-Proto_py.md  Test-Proto_py.md  Test-auth-basic-netrc-pass-given_py.md  Test-auth-basic-netrc-user-given_py.md  Test-auth-basic-netrc_py.md  Test-auth-basic_py.md  Test-auth-both_py.md  Test-auth-digest_py.md  Test-auth-with-content-disposition_py.md  Test-condget_py.md  Test-cookie-expires_py.md  Test-ftp-bad-list_px.md  Test-ftp-dir_px.md  Test-ftp-iri-disabled_px.md  Test-ftp-iri-fallback_px.md  Test-ftp-iri-recursive_px.md  Test-ftp-iri_px.md  Test-ftp-list-Multinet_px.md  Test-ftp-list-UNIX-hidden_px.md  Test-ftp-list-Unknown-a_px.md  Test-ftp-list-Unknown-hidden_px.md  Test-ftp-list-Unknown-list-a-fails_px.md  Test-ftp-list-Unknown_px.md  Test-ftp-pasv-fail_px.md  Test-ftp-pasv-not-supported_px.md  Test-ftp-recursive_px.md  Test-ftp_px.md  (+78 more)
wget-faster-cli/: Cargo.toml
wget-faster-cli/src/: args.rs  main.rs  output.rs
wget-faster-lib/: Cargo.toml
wget-faster-lib/benches/: download_benchmarks.rs
wget-faster-lib/src/: adaptive.rs  auth_handler.rs  client.rs  config.rs  cookies.rs  downloader.rs  error.rs  lib.rs  link_converter.rs  netrc.rs  output.rs  parallel.rs  progress.rs  recursive.rs  response_handler.rs  robots.rs  timestamping.rs
wget-faster-lib/tests/: TEST_HELPERS.md  cookie_tests.rs  error_tests.rs  integration_tests.rs  progress_tests.rs  recursive_tests.rs
