[workspace]
resolver = "2"
members = [
    "wget-faster-lib",
    "wget-faster-cli",
]

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unused_imports = "warn"
unused_mut = "warn"
dead_code = "warn"

[workspace.lints.clippy]
# Pedantic lints (but allow some common patterns)
pedantic = "warn"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"

# Restriction lints (potentially dangerous patterns)
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"

# Cargo lints
cargo = "warn"

# Complexity lints
cognitive_complexity = "warn"
too_many_arguments = "warn"
too_many_lines = "warn"
type_complexity = "warn"

# Performance lints
perf = "warn"

# Correctness lints (errors by default, but being explicit)
correctness = "deny"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["wget-faster contributors"]
license = "BSD-3-Clause"
repository = "https://github.com/wget-faster/wget-faster"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }

# HTTP client
reqwest = { version = "0.12", features = ["stream", "rustls-tls"], default-features = false }
http = "1.1"
hyper = "1.5"

# Async traits and utilities
futures = "0.3"
futures-util = "0.3"
bytes = "1.9"
pin-project-lite = "0.2"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# CLI and configuration
clap = { version = "4.5", features = ["derive", "cargo", "wrap_help"] }
clap_complete = "4.5"

# Progress and output
indicatif = "0.17"
console = "0.15"

# File I/O
tempfile = "3.14"
filetime = "0.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# URL handling
url = "2.5"
percent-encoding = "2.3"

# HTML parsing (for recursive download)
scraper = "0.21"
html5ever = "0.29"

# Cookie support
cookie_store = "0.21"
cookie = "0.18"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Compression
flate2 = "1.0"
brotli = "7.0"

# Time
chrono = "0.4"

# Testing
mockito = "1.5"
