[workspace]
resolver = "2"
members = [
    "wget-faster-lib",
    "wget-faster-cli",
]

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unused_imports = "warn"
unused_mut = "warn"
dead_code = "warn"

[workspace.lints.clippy]
# Pedantic lints (but allow some common patterns)
# Use lower priority so individual lints can override
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"

# Allow noisy pedantic lints that don't improve code quality
format_push_string = "allow"              # write! isn't always better than format!
struct_excessive_bools = "allow"          # Config structs naturally have many bools
match_same_arms = "allow"                 # Sometimes explicit is clearer
items_after_statements = "allow"          # use statements are fine mid-function
assigning_clones = "allow"                # clone() is often clearer than clone_from()
unused_self = "allow"                     # Trait methods may not use self yet
case_sensitive_file_extension_comparisons = "allow"  # URLs aren't file paths
comparison_chain = "allow"                # if-else chains are often clearer
trivially_copy_pass_by_ref = "allow"      # &self is idiomatic for methods
unnecessary_wraps = "allow"               # Future-proofing with Result is fine
cast_precision_loss = "allow"             # Handled with inline #[allow] where appropriate
cast_sign_loss = "allow"                  # Handled with inline #[allow] where appropriate
cast_possible_truncation = "allow"        # Handled with inline #[allow] where appropriate
field_reassign_with_default = "allow"     # Common pattern in test setup code

# Restriction lints (potentially dangerous patterns)
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"

# Cargo lints
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"  # TODO: Fix with dependency updates

# Complexity lints
cognitive_complexity = "warn"
too_many_arguments = "warn"
too_many_lines = "warn"
type_complexity = "warn"

# Performance lints
perf = { level = "warn", priority = -1 }

# Correctness lints (errors by default, but being explicit)
correctness = { level = "deny", priority = -1 }

[workspace.package]
version = "0.0.1"
edition = "2021"
authors = ["wget-faster contributors"]
license = "BSD-3-Clause"
repository = "https://github.com/wget-faster/wget-faster"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.48", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }

# HTTP client
reqwest = { version = "0.12.24", features = ["stream", "rustls-tls", "cookies"], default-features = false }
http = "1.1"
hyper = "1.5"

# Async traits and utilities
futures = "0.3"
futures-util = "0.3"
bytes = "1.9"
pin-project-lite = "0.2"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# CLI and configuration
clap = { version = "4.5.51", features = ["derive", "cargo", "wrap_help"] }
clap_complete = "4.5"

# Progress and output
indicatif = "0.17"
console = "0.15"

# File I/O
tempfile = "3.14"
filetime = "0.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# URL handling
url = "2.5"
percent-encoding = "2.3"

# HTML parsing (for recursive download)
scraper = "0.24"
html5ever = "0.29"

# Cookie support
cookie_store = "0.21"
cookie = "0.18"
reqwest_cookie_store = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Compression
flate2 = "1.0"
brotli = "7.0"

# Time
chrono = "0.4"
httpdate = "1.0"

# Random
rand = "0.8"

# Regular expressions
regex = "1.11"

# Testing
mockito = "1.5"
criterion = { version = "0.5", features = ["async_tokio"] }
