[package]
name = "wget-faster-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Drop-in replacement for GNU wget with high-performance parallel downloads"
keywords = ["wget", "http", "download", "cli", "async"]
categories = ["command-line-utilities", "network-programming"]

[[bin]]
name = "wget-faster"
path = "src/main.rs"

[dependencies]
wget-faster-lib = { path = "../wget-faster-lib" }
tokio = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
indicatif = { workspace = true }
console = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
filetime = { workspace = true }
