[package]
name = "wget-faster-lib"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "High-performance async HTTP downloader library with parallel Range request support"
keywords = ["http", "download", "async", "parallel", "wget"]
categories = ["network-programming", "asynchronous", "web-programming::http-client"]
readme = "../README.md"
homepage = "https://github.com/wget-faster/wget-faster"
documentation = "https://docs.rs/wget-faster-lib"

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
reqwest = { workspace = true }
http = { workspace = true }
hyper = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
bytes = { workspace = true }
pin-project-lite = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tempfile = { workspace = true }
filetime = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
percent-encoding = { workspace = true }
scraper = { workspace = true }
html5ever = { workspace = true }
cookie_store = { workspace = true }
cookie = { workspace = true }
tracing = { workspace = true }
flate2 = { workspace = true }
brotli = { workspace = true }
chrono = { workspace = true }
httpdate = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
mockito = { workspace = true }
tracing-subscriber = { workspace = true }
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "download_benchmarks"
harness = false

[lints]
workspace = true
